Phase 12 이후 시스템 테스트와 Admin 개발 환경을 완성한다